fix sidescroll on ios

--- a/_includes/site.css
+++ b/_includes/site.css
@@ -4,7 +4,14 @@ body {
     background-color: #fff;
     line-height: 1.4;
     margin: 0;
+    min-height: 100%;
+    position: relative;
+}
+.prevent-safari-overflow-scroll {
+    height: 100%;
+    width: 100%;
     overflow-x: hidden;
+    position: relative;
 }
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Montserrat', sans-serif;
@@ -52,14 +59,19 @@ p {
     text-align: left;
     -webkit-appearance: none;
     position: relative;
-    left: 1px;
+    left: 2px;
     text-align: left;
     font-family: 'Open Sans', sans-serif;
 }
 .langpicker-icon{
     height: 2em;
     width: 1.5em;
-    background: white;
+    transition: 0.2s transform;
+}
+.langpicker-button:hover .langpicker-icon,
+.langpicker-button:active .langpicker-icon,
+.langpicker-button:focus .langpicker-icon {
+    transform: rotate(135deg);
 }
 .langpicker-text {
     display: inline-block;
